[project]
name = "pdf-toolchest"
version = "0.1.13"
description = "A Swiss-army knife for everyday PDF workflows – pure-Python, cross-platform, and fully typed."
authors = [
    {name = "Alex",email = "aswann@protonmail.com"}
]
readme = "README.md"
requires-python = "<4,>=3.11"
dependencies = [
    "pydantic (>=2.10.6,<3.0.0)",
    "img2pdf (>=0.5.1,<0.6.0)",
    "pypdf (>=5.2.0,<6.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "typer (>=0.15.1,<0.16.0)",
    "pymupdf (>=1.26.3,<2.0.0)",
]

[tool.poetry]
packages = [
    { include = "pdf_tools" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[project.scripts]
pdf-tools = "pdf_tools.main:app"

[tool.poetry.group.dev]
optional = true


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
hypothesis = "^6.136.6"
reportlab = "^4.4.3"
types-reportlab = "^4.4.1.20250602"
coverage = "^7.10.1"
ruff = "^0.15.20"
mypy = "^2.1.0"

[tool.mypy]
python_executable = ".venv/bin/python"
plugins = ["pydantic.mypy"]
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
show_error_codes = true
warn_unused_ignores = true
warn_return_any = true
disallow_any_unimported = true


[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow"
]

[tool.ruff]
target-version = "py311"
line-length = 79
indent-width = 4
exclude = ["*/scripts/*", ".pre-commit-config.yaml"]

[tool.ruff.lint]
select = ["B", "E", "F", "W", "C901", "ERA001"]
ignore = []
unfixable = ["B", "ERA001"]
extend-select = [
    "UP", "FIX002", "I"
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"